fix: table color only in dark mode

--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -15070,7 +15070,7 @@ button[disabled] {
   position: relative;
 }
 
-.table-primary {
+[data-bs-theme=dark] .table-primary {
   background-color: #4d4d4d !important;
   color: rgb(240, 240, 240);
 }
